--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 /node_modules
 .env
 .env.local
+
+# Ignore node_modules in client
+client/node_modules/
+
+# Ignore node_modules in server
+server/node_modules/
