--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
+# Ignore all node_modules directories
+**/node_modules/
 
 .env
 .env.local
-
-# Ignore node_modules in client
-client/node_modules/
-
-# Ignore node_modules in server
-server/node_modules/
